--- a/portfolio.html
+++ b/portfolio.html
@@ -57,13 +57,13 @@
     <h1>My Projects</h1>
     <div class="container">
         <div class="card">
-            Singing
+            Audio to text
         </div>
         <div class="card">
-            C++
+            QR code Generator
         </div>
         <div class="card">
-            Python
+            Portfolio
         </div>
     </div> 
    </div>
